# opentdx

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  FAQ.md  LICENSE  README.md  TDXMACDStrategy.py  demo.py  demo_diff.py  demo_ext.py  demo_new.py  pyproject.toml  requirements.txt  test_mcp.py
.github/workflows/: publish.yml  tag.yml
opentdx/: cli.py  const.py  tdxClient.py
opentdx/client/: baseStockClient.py  commonClientMixin.py  exQuotationClient.py  macQuotationClient.py  quotationClient.py
opentdx/commands/: __init__.py  market_monitor.py
opentdx/parser/ex_quotation/: category_list.py  chart_sampling.py  count.py  goods.py  history_tick_chart.py  history_transaction.py  kline.py  kline2.py  list.py  quotes.py  quotes2.py  quotes_single.py  server.py  table.py  tick_chart.py
opentdx/parser/mac_quotation/: __init__.py  board_list.py  board_members.py  board_members_quotes.py  market_monitor.py  symbol_auction.py  symbol_bar.py  symbol_belong_board.py  symbol_capital_flow.py  symbol_quotes.py  symbol_tick_chart.py  symbol_tick_charts.py  symbol_transaction.py  symbol_zjlx.py  unusual.py
opentdx/utils/: base_reader.py  bitmap.py  block_reader.py  cache.py  heartbeat.py  help.py
tdx_mcp/: README.md  __init__.py  const.py  mcpServer.py  tdxClient.py
tdx_mcp/client/: __init__.py  baseStockClient.py  commonClientMixin.py  exQuotationClient.py  quotationClient.py
tdx_mcp/parser/: baseParser.py
tdx_mcp/utils/: block_reader.py  cache.py  heartbeat.py  help.py
tests/: conftest.py  test_mac_quotation_client.py  test_tdx_client.py
(+73 files in other folders)
